Fix ObjectCollectedException during restore and improve JDWP port detection
Pin JDI object references with disableCollection() before setting local
variables during thread restore. The target JVM's GC could collect heap
objects between resolution and setValue(), causing intermittent
ObjectCollectedException failures across all platforms and Java versions.

Also eagerly detect and cache the JDWP port in DurableAgent.premain() so
that subsequent freeze/restore operations use the cached value instead of
re-probing. ChildJvm test utility now passes jdk.attach and
allowAttachSelf to child processes for consistency with the documented
user-facing command line.

https://claude.ai/code/session_01JVaEev424m8qmDwGq8FATE